--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,3 +26,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
           FOLDER: docs/.vuepress/dist 
+          node-version: '16.x'
