--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,10 +20,11 @@ jobs:
         run: |
           npm install
           npm run docs:build
+        with:
+          node-version: '16.x'
       - name: Deploy 
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: docs/.vuepress/dist 
-          node-version: '16.x'
+          FOLDER: docs/.vuepress/dist
