--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,6 +17,7 @@ jobs:
           persist-credentials: false
 
       - name: Install and Build 
+        uses: actions/setup-node@v3
         with:
           node-version: '16.x'
         run: |
