--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,10 +21,9 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Install and Build 
-        run:
-          npm install
-          npm run docs:build
+      - run: npm install
+      - run: npm run docs:build
+      
       - name: Deploy 
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
